Fix theme toggle spacing

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -7,6 +7,11 @@ iframe[src*="buttons.github.io"] {
     font-weight: normal;
 }
 
+/* Theme Toggles */
+label[data-class-target="label + .docsify-tabs"] {
+    margin-right: 0.8em;
+}
+
 
 /* Custom Styles */
 /* ========================================================================== */
